--- a/.classpath
+++ b/.classpath
@@ -8,13 +8,14 @@
 			<attribute name="owner.project.facets" value="#system#;jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/tomas/Desktop/TPINT_GRUPO_8_LAB4/mysql-connector-java-8.0.25.jar">
+	<classpathentry kind="lib" path="F:/Program Files (x86)/eclipse-workspace2/git TP int/TPINT_GRUPO_8_LAB4/mysql-connector-java-8.0.25.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
