alan agregar cuenta

--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,7 @@
 			<attribute name="owner.project.facets" value="#system#;jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/tomas/Desktop/wsJava/mysql-connector-java-8.0.25.jar">
+	<classpathentry kind="lib" path="C:/Users/Alanm/Downloads/mysql-connector-java-8.0.25 (1).jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
